--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="Portfolio of Muhammad Amin bin Abd Rahman - Developer in the making!." />
-  <title>Your Name — Portfolio</title>
+  <title>Muhammad Amin bin Abd Rahman — Portfolio</title>
   
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
