--- a/index.html
+++ b/index.html
@@ -153,6 +153,6 @@
     </div>
   </footer>
 
-  <script type="module" src="./src/main.ts"></script>
+  <script type="module" src="src/main.ts"></script>
 </body>
 </html>
